@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix broken pics.
+ doc/playbook/items-extract
+ doc/playbook/Makefile.am
+Nicolas Weeger, 2008-02-09
+
 socket/loop.c request.c: fix missing parameter.
 Nicolas Weeger, 2008-02-09
 
